# koji-fedoramessaging-messages

./: .coveragerc  .gitignore  .packit.yaml  .pre-commit-config.yaml  MANIFEST.in  README.md  REUSE.toml  TODO.md  config.toml.example  fedmsg-koji-plugin.py  make-spec.sh  pyproject.toml  python-koji-fedoramessaging-messages.spec  python-koji-fedoramessaging-messages.spec.in  setup.cfg  tox.ini
.github/: renovate.json
.github/workflows/: main.yaml
docs/: generate_json_schema.py
docs/source/: build.rst  conf.py  index.rst  package.rst  repo.rst  rpm.rst  tag.rst  task.rst
koji_fedmsg_plugin/: koji-fedmsg-plugin.py
koji_fedmsg_plugin/messages/: __init__.py  build.py  package.py  repo.py  rpm.py  tag.py  task.py
koji_fedmsg_plugin/tests/messages/: test_build.py  test_package.py  test_repo.py  test_rpm.py  test_tag.py  test_task.py
koji_fedoramessaging_messages/: __init__.py  base.py  build.py  package.py  repo.py  rpm.py  tag.py  task.py  thing.py  utilities.py
koji_fedoramessaging_messages/tests/: test_base.py  test_build.py  test_common.py  test_package.py  test_repo.py  test_rpm.py  test_tag.py  test_task.py  test_thing.py  utils.py
tests/: __init__.py  test_base.py  test_build.py  test_package.py  test_repo.py  test_rpm.py  test_tag.py  test_task.py  test_utilities.py
